Jeu_de_tests/error/redefinition_function_function.tpc
/* function - function */

int main(void){
    return 0;
}

int main(int a){
    return 0;
}
